# elysium

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
install_configs/: template.toml
src/game/: main.cpp
src/installer/: asset_manager.cpp  asset_manager.hpp  main.cpp  spritesheet.cpp  spritesheet.hpp
src/simulator/: main.cpp
